[tool.poetry]
name = "peerloop-backend"
version = "0.1.0"
description = "peerloop main backend"
authors = ["peerloop"]
readme = "README.md"
packages = [{include="peerloop"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
python-dotenv = "^1.0.0"
dependency-injector = "^4.41.0"
sqlalchemy = "^2.0.23"
greenlet = "^3.0.1"
bcrypt = "^4.0.1"
pyjwt = "^2.8.0"
email-validator = "^2.1.0.post1"
aiohttp = "^3.8.6"
python-multipart = "^0.0.6"
asyncpg = "^0.29.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.287"
black = "^23.9.0"
isort = "^5.12.0"
pre-commit = "^3.5.0"
mypy = "^1.7.0"
commitizen = "^3.12.0"

[tool.ruff]
line-length = 120
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "UP",  # pyupgrade
]
target-version = "py310"

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.11"
# warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
